<resources>
    <string name="app_name">Court Counter</string>
    <string name="valueA">0</string>
    <string name="valueB">0</string>
    <string name="points3">+3 points</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="points2">+2 points</string>
    <string name="freeThrow">free throw</string>
    <string name="reset">Reset</string>
</resources>
