<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/teamA"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/valueA"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add3ForTeamA"
                android:paddingBottom="8dp"
                android:text="@string/points3"
                android:textAllCaps="true" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add2ForTeamA"
                android:paddingBottom="8dp"
                android:text="@string/points2"
                android:textAllCaps="true" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add1ForTeamA"
                android:text="@string/freeThrow"
                android:textAllCaps="true" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/teamB"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/valueB"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add3ForTeamB"
                android:paddingBottom="8dp"
                android:text="@string/points3"
                android:textAllCaps="true" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add2ForTeamB"
                android:paddingBottom="8dp"
                android:text="@string/points2"
                android:textAllCaps="true" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add1ForTeamB"
                android:text="@string/freeThrow"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>